--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <ul>
       <li>
-        <a href="./assets/index.html" target="_blank">Jogo Dygeras</a>
+        <a href="./assets/1index.html" target="_blank">Jogo Dygeras</a>
       </li>
 
       <li>
